--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "burger_builder",
+  "name": "chat_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "autoprefixer": "7.1.6",
     "axios": "^0.21.1",
     "babel-core": "6.26.0",
@@ -25,9 +28,11 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "firebase": "^8.4.1",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "mdbreact": "^5.0.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -35,6 +40,7 @@
     "prop-types": "^15.7.2",
     "raf": "3.4.0",
     "react": "^17.0.1",
+    "react-chat-engine": "^1.8.10",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^17.0.1",
     "resolve": "1.6.0",
