--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "chat_app",
+  "name": "Connect",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "autoprefixer": "7.1.6",
     "axios": "^0.21.1",
     "babel-core": "6.26.0",
@@ -19,6 +20,7 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "emotion": "^11.0.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -40,9 +42,12 @@
     "prop-types": "^15.7.2",
     "raf": "3.4.0",
     "react": "^17.0.1",
+    "react-chat-elements": "^10.14.0",
     "react-chat-engine": "^1.8.10",
+    "react-chat-widget": "^3.0.5",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^17.0.1",
+    "react-scroll-to-bottom": "^4.1.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
