--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "material-ui": "^1.0.0-beta.47",
     "mdbreact": "^5.0.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -47,6 +48,7 @@
     "react-chat-widget": "^3.0.5",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^17.0.1",
+    "react-native-crypto-js": "^1.0.0",
     "react-scroll-to-bottom": "^4.1.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
